@@ -1,6 +1,8 @@
 c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 2.4.10
+  b - fix to get new pagg ID and add additional CSA records when restarting from
+      checkpoint (backported from 2.5.2)
 
 2.4.9
   b - Backed out enhancement for preempted jobs. This was SVN revision 3784.
